// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div
  className="gmagic-error-js"
>
  <p>
    Something went wrong.  Please 
    <a
      href="https://github.com/codingjack/gmagic/issues"
    >
      report
    </a>
     the error below.
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
  <p>
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
</div>
`;

exports[`it renders correctly 2`] = `
<div
  children="some text"
  className="gmagic-error-js"
  color="green"
  disabled={true}
  extraClass=".gmagic-decorator"
  icon="check"
  large={true}
  namespace="name-space"
  onClick={[Function]}
  text="This is a button"
>
  <p>
    Something went wrong.  Please 
    <a
      href="https://github.com/codingjack/gmagic/issues"
    >
      report
    </a>
     the error below.
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
  <p>
    <i>
      A Button Component requires text or an icon
    </i>
  </p>
</div>
`;

exports[`onClick callback works and it unmounts should match the snapshot 1`] = `"<button class=\\"gmagic-btn \\" role=\\"button\\" tabindex=\\"0\\"><svg class=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\"><path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"></path></svg><span>This is a button</span></button>"`;
